<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/main_menu_add"
        android:title="@string/menu_button_add"
        android:actionLayout="@layout/activity_main"
        app:showAsAction="ifRoom"/>
</menu>