<resources>
    <string name="app_name">Best Monopoly Ever!</string>
    <string name="winnerTitle">Monopoly King:</string>
    <string name="menu">Menu</string>
    <string name="sell">Sell</string>
    <string name="suicide">Suicide</string>
    <string name="yesAnswer">Yes</string>
    <string name="buyQuestion">Buy this cell?</string>
    <string name="noAnswer">No</string>
    <string name="onAI">AI: ON</string>
    <string name="offAI">AI: OFF</string>
    <string name="namespace">Name: %1$s</string>
    <string name="buyspace">Buy: %1$d</string>
...
