<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:gravity="center_vertical"
    android:background="@color/colorField"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ru.spbstu.kspt.myhorsemove.FieldView
        android:id="@+id/FV2"
        android:layout_width="match_parent"
        android:layout_height="335dp" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="338dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="120dp"
        android:text="@string/textView1"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="334dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="170dp"
        android:text="@string/textView2"
        android:textSize="25sp" />

    <Button
        android:id="@+id/button2"
        android:layout_width="143dp"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:layout_marginBottom="10dp"
        android:onClick="onClick"
        android:text="@string/start" />




</FrameLayout>