<?xml version="1.0" encoding="utf-8"?>
<!-- android.support.constraint.ConstraintLayout -->
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="@color/colorBackground"
tools:context=".GameActivity">

<ImageButton
    android:id="@+id/button7"
    android:layout_width="78dp"
    android:layout_height="89dp"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintBottom_toBottomOf="parent"
    android:background="@drawable/num7" />

<ImageButton
    android:id="@+id/button8"
    android:layout_width="78dp"
    android:layout_height="89dp"
    app:layout_constraintStart_toEndOf="@+id/button7"
    app:layout_constraintBottom_toBottomOf="parent"
    android:background="@drawable/num8" />

<ImageButton
    android:id="@+id/button9"
    android:layout_width="78dp"
    android:layout_height="89dp"
    app:layout_constraintStart_toEndOf="@+id/button8"
    app:layout_constraintBottom_toBottomOf="parent"
    android:background="@drawable/num9" />

<ImageButton
    android:id="@+id/button0"
    android:layout_width="78dp"
    android:layout_height="89dp"
    app:layout_constraintStart_toEndOf="@+id/button9"
    app:layout_constraintBottom_toBottomOf="parent"
    android:background="@drawable/num0" />

<ImageButton
    android:id="@+id/button4"
    android:layout_width="78dp"
    android:layout_height="89dp"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintBottom_toTopOf="@+id/button7"
    android:background="@drawable/num4" />

<ImageButton
    android:id="@+id/button5"
    android:layout_width="78dp"
    android:layout_height="89dp"
    app:layout_constraintStart_toEndOf="@+id/button4"
    app:layout_constraintBottom_toTopOf="@+id/button8"
    android:background="@drawable/num5" />

<ImageButton
    android:id="@+id/button6"
    android:layout_width="78dp"
    android:layout_height="89dp"
    app:layout_constraintStart_toEndOf="@+id/button5"
    app:layout_constraintBottom_toTopOf="@+id/button9"
    android:background="@drawable/num6" />

<ImageButton
    android:id="@+id/del"
    android:layout_width="78dp"
    android:layout_height="89dp"
    app:layout_constraintStart_toEndOf="@+id/button6"
    app:layout_constraintBottom_toTopOf="@+id/button0"
    android:background="@drawable/del" />

<ImageButton
    android:id="@+id/button1"
    android:layout_width="78dp"
    android:layout_height="89dp"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintBottom_toTopOf="@+id/button4"
    android:background="@drawable/num1" />

<ImageButton
    android:id="@+id/button2"
    android:layout_width="78dp"
    android:layout_height="89dp"
    app:layout_constraintStart_toEndOf="@+id/button1"
    app:layout_constraintBottom_toTopOf="@+id/button5"
    android:background="@drawable/num2" />

<ImageButton
    android:id="@+id/button3"
    android:layout_width="78dp"
    android:layout_height="89dp"
    app:layout_constraintStart_toEndOf="@+id/button2"
    app:layout_constraintBottom_toTopOf="@+id/button6"
    android:background="@drawable/num3" />

<ImageButton
    android:id="@+id/ok"
    android:layout_width="78dp"
    android:layout_height="89dp"
    app:layout_constraintStart_toEndOf="@+id/button3"
    app:layout_constraintBottom_toTopOf="@+id/del"
    android:background="@drawable/ok" />

<TextView
    android:id="@+id/textView"
    android:layout_width="140dp"
    android:layout_height="80dp"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintBottom_toTopOf="@+id/button1"

    android:maxLength="4"
    android:text="xxxx"
    android:textSize="50sp"
    android:freezesText="true"/>


<ScrollView
    android:layout_width="0dp"
    android:layout_height="0dp"
    android:scrollbarAlwaysDrawVerticalTrack="true"
    android:scrollbars="vertical"
    app:layout_constraintBottom_toTopOf="@+id/ok"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="1.0"
    app:layout_constraintStart_toEndOf="@+id/textView"
    app:layout_constraintTop_toTopOf="parent" >
    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:textSize="20sp"
        android:text=""
        android:textStyle="bold" />
</ScrollView>


<TextView
    android:id="@+id/textView3"
    android:layout_width="107dp"
    android:layout_height="38dp"
    android:layout_marginTop="16dp"
    android:text=""
    android:textSize="30sp"
    android:textStyle="bold"
    app:layout_constraintTop_toTopOf="parent"
    tools:ignore="MissingConstraints"
    tools:layout_editor_absoluteX="0dp" />

</android.support.constraint.ConstraintLayout>
