<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/WinScreen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WinScreenActivity">

    <TextView
        android:id="@+id/winerName"
        android:textColor="#ff4643"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:textSize="25sp"
        android:textStyle="bold"
        android:text=""/>
    <TextView
        android:id="@+id/title"
        android:textColor="#7d20f5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/winerName"
        android:layout_marginBottom="10dp"
        android:textSize="30sp"
        android:textStyle="bold"
        android:text="@string/winnerTitle"/>

    <Button
        android:id="@+id/buttonMenu"
        android:layout_width="100dp"
        android:layout_height="60dp"
        android:background="#7d20f5"
        android:textColor="#ffffff"
        android:text="@string/menu"
        android:textSize="30sp"
        android:layout_marginBottom="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</android.support.constraint.ConstraintLayout>